// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StepsTree /> tests snapshot test 1`] = `
<div>
  <ul
    class="root"
  >
    <li
      class="item"
      data-type="item"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main name"
          style="--text-line-clamp: 1;"
        >
          Step 1
        </p>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          9m 11s
        </span>
      </div>
    </li>
    <li
      class="item"
      data-type="group"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="nameWrapper"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main name"
            style="--text-line-clamp: 1;"
          >
            Step 2
          </p>
        </div>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          9m 29s
        </span>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="success"
          >
            <span
              class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
              icon="tick-circle"
            >
              <svg
                data-icon="tick-circle"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick-circle
                </desc>
                <path
                  d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Success
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              12m 59s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="running"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.0845       a 15.9155 15.9155 0 0 1 0 31.831       a 15.9155 15.9155 0 0 1 0 -31.831"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box; stroke: currentColor; stroke-dasharray: 75, 100; stroke-width: 2.8; stroke-linecap: round;"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Running
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              14m 17s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Failed
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              2m 1s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="expired"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="expired"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 10 10"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M10 4V8H9V4H10ZM9 9V10H10V9H9ZM8 7.645C7.265 8.475 6.195 9 5 9C2.795 9 1 7.205 1 5C1 2.795 2.795 1 5 1V5.5L8.775 1.725C7.86 0.67 6.51 0 5 0C2.24 0 0 2.24 0 5C0 7.76 2.24 10 5 10C6.125 10 7.165 9.63 8 9V7.645Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Expired
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              5m 2s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="aborted"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="banned"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 10 10"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.55 1.45C7.6 0.5 6.35 0 5 0C3.65 0 2.4 0.5 1.45 1.45C-0.500001 3.4 -0.500001 6.6 1.45 8.55C2.4 9.5 3.65 10 5 10C6.35 10 7.6 9.5 8.55 8.55C10.5 6.6 10.5 3.4 8.55 1.45ZM2.15 2.15C2.95 1.4 3.95 1 5 1C5.9 1 6.75 1.3 7.45 1.85L1.85 7.45C0.6 5.9 0.75 3.6 2.15 2.15ZM7.85 7.85C7.05 8.6 6.05 9 5 9C4.1 9 3.25 8.7 2.55 8.15L8.15 2.55C8.7 3.25 9.00001 4.1 9.00001 5C9.00001 6.05 8.60001 7.05 7.85 7.85Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Aborted
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              2m 14s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="suspended"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="banned"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 10 10"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.55 1.45C7.6 0.5 6.35 0 5 0C3.65 0 2.4 0.5 1.45 1.45C-0.500001 3.4 -0.500001 6.6 1.45 8.55C2.4 9.5 3.65 10 5 10C6.35 10 7.6 9.5 8.55 8.55C10.5 6.6 10.5 3.4 8.55 1.45ZM2.15 2.15C2.95 1.4 3.95 1 5 1C5.9 1 6.75 1.3 7.45 1.85L1.85 7.45C0.6 5.9 0.75 3.6 2.15 2.15ZM7.85 7.85C7.05 8.6 6.05 9 5 9C4.1 9 3.25 8.7 2.55 8.15L8.15 2.55C8.7 3.25 9.00001 4.1 9.00001 5C9.00001 6.05 8.60001 7.05 7.85 7.85Z"
                  fill="currentColor"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Suspended
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              7m 2s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="queued"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="queued"
            >
              <svg
                height="16"
                viewBox="0 0 14 11"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M13.3636 0H0.636364C0.467589 0 0.305728 0.0670454 0.186387 0.186387C0.0670452 0.305728 0 0.467589 0 0.636364V4.45455C0 4.62332 0.0670452 4.78518 0.186387 4.90452C0.305728 5.02386 0.467589 5.09091 0.636364 5.09091H13.3636C13.5324 5.09091 13.6943 5.02386 13.8136 4.90452C13.933 4.78518 14 4.62332 14 4.45455V0.636364C14 0.467589 13.933 0.305728 13.8136 0.186387C13.6943 0.0670454 13.5324 0 13.3636 0ZM12.7273 3.81818H1.27273V1.27273H12.7273V3.81818Z"
                />
                <path
                  d="M13.3636 6.36328H0.636364C0.467589 6.36328 0.305728 6.43033 0.186387 6.54967C0.0670452 6.66901 0 6.83087 0 6.99964C0 7.16842 0.0670452 7.33028 0.186387 7.44962C0.305728 7.56896 0.467589 7.63601 0.636364 7.63601H13.3636C13.5324 7.63601 13.6943 7.56896 13.8136 7.44962C13.933 7.33028 14 7.16842 14 6.99964C14 6.83087 13.933 6.66901 13.8136 6.54967C13.6943 6.43033 13.5324 6.36328 13.3636 6.36328Z"
                />
                <path
                  d="M13.3636 8.91016H0.636364C0.467589 8.91016 0.305728 8.9772 0.186387 9.09654C0.0670452 9.21588 0 9.37775 0 9.54652C0 9.71529 0.0670452 9.87716 0.186387 9.9965C0.305728 10.1158 0.467589 10.1829 0.636364 10.1829H13.3636C13.5324 10.1829 13.6943 10.1158 13.8136 9.9965C13.933 9.87716 14 9.71529 14 9.54652C14 9.37775 13.933 9.21588 13.8136 9.09654C13.6943 8.9772 13.5324 8.91016 13.3636 8.91016Z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Queued
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 38s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="notstarted"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="pending"
            >
              <svg
                height="16"
                viewBox="0 0 9 9"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8.20641 2.70856C8.13476 2.75156 8.0631 2.76589 7.99145 2.76589C7.86246 2.76589 7.73348 2.69423 7.6475 2.57958C7.51852 2.36462 7.36087 2.17831 7.20323 1.992C7.04559 1.83436 7.05992 1.5764 7.21756 1.43309C7.3752 1.27544 7.63317 1.28978 7.77648 1.44742C7.97711 1.66239 8.16342 1.90602 8.32106 2.16398C8.45004 2.35028 8.39272 2.59392 8.20641 2.70856Z"
                />
                <path
                  d="M5.98739 7.8679C6.56064 7.60994 7.07656 7.223 7.44917 6.7214C7.57815 6.54943 7.83611 6.50644 8.00809 6.64975C8.18006 6.77873 8.22306 7.03669 8.07974 7.20866C7.62115 7.81057 7.0049 8.29784 6.30268 8.61312C6.24535 8.64178 6.20236 8.64178 6.14503 8.64178C5.98739 8.64178 5.84408 8.5558 5.77242 8.39815C5.68643 8.19752 5.78675 7.95389 5.98739 7.8679Z"
                />
                <path
                  d="M8.07816 5.40317C8.20714 4.93024 8.22147 4.42864 8.16415 3.95571C8.13548 3.74075 8.2788 3.54011 8.5081 3.51145C8.72306 3.48278 8.9237 3.6261 8.95236 3.8554C9.03835 4.44297 9.00969 5.03055 8.85204 5.61813C8.80905 5.80444 8.63708 5.91909 8.4651 5.91909C8.43644 5.91909 8.39345 5.91909 8.36478 5.90476C8.14982 5.8331 8.02083 5.61813 8.07816 5.40317Z"
                />
                <path
                  d="M5.74837 0.857647C5.6886 0.652472 5.80647 0.437689 6.01165 0.377916C6.21683 0.318143 6.43161 0.436016 6.49138 0.641192C6.55115 0.846367 6.43328 1.06115 6.22811 1.12092C6.02293 1.1807 5.80815 1.06282 5.74837 0.857647Z"
                />
                <path
                  d="M4.52451 0C4.73948 0 4.92578 0.171974 4.92578 0.401274C4.92578 0.616242 4.75381 0.802547 4.52451 0.802547C2.48948 0.802547 0.827058 2.46497 0.827058 4.5C0.827058 4.88694 0.884382 5.27388 1.01336 5.66082C1.08502 5.87579 0.97037 6.09076 0.755402 6.16242C0.712409 6.17675 0.669415 6.17675 0.626421 6.17675C0.454447 6.17675 0.296803 6.07643 0.25381 5.90445C0.0961666 5.44586 0.0245099 4.97293 0.0245099 4.5C0.0245099 2.0207 2.04521 0 4.52451 0Z"
                />
                <path
                  d="M1.80158 6.99381C2.50381 7.75336 3.49266 8.19763 4.52451 8.19763C4.73948 8.19763 4.92578 8.3696 4.92578 8.5989C4.92578 8.81387 4.75381 9.00017 4.52451 9.00017C3.27769 9.00017 2.05954 8.46992 1.214 7.53839C1.07069 7.38075 1.07069 7.12279 1.24266 6.97947C1.40031 6.82183 1.64394 6.83616 1.80158 6.99381Z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Not Started
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              7m 6s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="paused"
          >
            <span
              class="bp3-icon bp3-icon-pause StyledProps--main icon"
              icon="pause"
            >
              <svg
                data-icon="pause"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  pause
                </desc>
                <path
                  d="M6 3H4c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1zm6 0h-2c-.55 0-1 .45-1 1v8c0 .55.45 1 1 1h2c.55 0 1-.45 1-1V4c0-.55-.45-1-1-1z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Paused
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              5m 23s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="waiting"
          >
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Waiting
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              8m 21s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="skipped"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="skipped"
            >
              <svg
                height="16"
                viewBox="0 0 16 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M3.24972 8.54297H0.745838C0.337403 8.54297 0 8.88037 0 9.28881V11.8104C0 12.2189 0.337403 12.5563 0.745838 12.5563H3.26748C3.67592 12.5563 4.01332 12.2189 4.01332 11.8104V9.28881C3.99556 8.88037 3.65816 8.54297 3.24972 8.54297Z"
                />
                <path
                  d="M15.2364 8.54297H12.7325C12.3241 8.54297 11.9867 8.88037 11.9867 9.28881V11.8104C11.9867 12.2189 12.3241 12.5563 12.7325 12.5563H15.2542C15.6626 12.5563 16 12.2189 16 11.8104V9.28881C15.9823 8.88037 15.6449 8.54297 15.2364 8.54297Z"
                />
                <path
                  d="M9.25192 8.54297H6.73027C6.32184 8.54297 5.98444 8.88037 5.98444 9.28881V11.8104C5.98444 12.2189 6.32184 12.5563 6.73027 12.5563H9.25192C9.66035 12.5563 9.99775 12.2189 9.99775 11.8104V9.28881C9.98 8.88037 9.66035 8.54297 9.25192 8.54297ZM9.25192 11.7927H6.73027V9.27105H9.25192V11.7927Z"
                />
                <path
                  d="M14.6504 6.71254L15.5383 2.37958L13.9401 2.91232C13.3363 2.09545 12.555 1.42064 11.6493 0.923418C10.5483 0.319645 9.28748 0 7.99114 0C4.01334 0 0.781372 3.01887 0.781372 6.71254C0.781372 7.01443 1.02998 7.26304 1.33187 7.26304C1.63376 7.26304 1.88237 7.01443 1.88237 6.71254C1.88237 3.62264 4.61711 1.101 7.99114 1.101C9.89125 1.101 11.6671 1.91787 12.8213 3.26748L11.3297 3.78246L14.6504 6.71254Z"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              Skipped
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              13m 12s
            </span>
          </div>
        </li>
      </ul>
    </li>
    <li
      class="item"
      data-type="group"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <div
          class="nameWrapper"
        >
          <p
            class="StyledProps--font Text--lineclamp StyledProps--main name"
            style="--text-line-clamp: 1;"
          >
            Step 3
          </p>
        </div>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          6m 12s
        </span>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="parallel"
        >
          <div
            class="step"
            data-status="success"
          >
            <span
              class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
              icon="tick-circle"
            >
              <svg
                data-icon="tick-circle"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick-circle
                </desc>
                <path
                  d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="parallelIcon"
              />
              <span>
                No valid template with id "parallelSteps" found in any namespace
              </span>
            </div>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  3m 38s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  13m 20s
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li
          class="item"
          data-type="parallel"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="parallelIcon"
              />
              <span>
                No valid template with id "parallelSteps" found in any namespace
              </span>
            </div>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  3m 38s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="failed"
              >
                <span
                  class="bp3-icon StyledProps--main icon"
                  data-icon="circle-cross"
                >
                  <svg
                    height="16"
                    viewBox="0 0 13 13"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      clip-rule="evenodd"
                      d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Failed
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  13m 20s
                </span>
              </div>
            </li>
          </ul>
        </li>
        <li
          class="item"
          data-type="parallel"
        >
          <div
            class="step"
            data-status="running"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.0845       a 15.9155 15.9155 0 0 1 0 31.831       a 15.9155 15.9155 0 0 1 0 -31.831"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box; stroke: currentColor; stroke-dasharray: 75, 100; stroke-width: 2.8; stroke-linecap: round;"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="parallelIcon"
              />
              <span>
                No valid template with id "parallelSteps" found in any namespace
              </span>
            </div>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Success
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  3m 38s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="running"
              >
                <span
                  class="bp3-icon StyledProps--main icon"
                  data-icon="spinner"
                >
                  <svg
                    fill="none"
                    height="16"
                    viewBox="0 0 36 36"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M18 2.0845       a 15.9155 15.9155 0 0 1 0 31.831       a 15.9155 15.9155 0 0 1 0 -31.831"
                      style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box; stroke: currentColor; stroke-dasharray: 75, 100; stroke-width: 2.8; stroke-linecap: round;"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  Running
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  13m 20s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="group"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <div
                  class="nameWrapper"
                >
                  <div
                    class="groupIcon"
                  />
                  <p
                    class="StyledProps--font Text--lineclamp StyledProps--main name"
                    style="--text-line-clamp: 1;"
                  >
                    Step 3_7
                  </p>
                </div>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  6m 12s
                </span>
              </div>
              <ul
                class="root"
              >
                <li
                  class="item"
                  data-type="item"
                >
                  <div
                    class="step"
                    data-status="success"
                  >
                    <span
                      class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                      icon="tick-circle"
                    >
                      <svg
                        data-icon="tick-circle"
                        height="16"
                        viewBox="0 0 16 16"
                        width="16"
                      >
                        <desc>
                          tick-circle
                        </desc>
                        <path
                          d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                          fill-rule="evenodd"
                        />
                      </svg>
                    </span>
                    <p
                      class="StyledProps--font Text--lineclamp StyledProps--main name"
                      style="--text-line-clamp: 1;"
                    >
                      Success
                    </p>
                    <span
                      class="StyledProps--font StyledProps--main duration StyledProps--inline"
                    >
                       
                      13m 20s
                    </span>
                  </div>
                </li>
              </ul>
            </li>
          </ul>
        </li>
      </ul>
    </li>
    <li
      class="item"
      data-type="group"
    >
      <div
        class="step"
        data-status="running"
      >
        <span
          class="bp3-icon StyledProps--main icon"
          data-icon="spinner"
        >
          <svg
            fill="none"
            height="16"
            viewBox="0 0 36 36"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M18 2.0845       a 15.9155 15.9155 0 0 1 0 31.831       a 15.9155 15.9155 0 0 1 0 -31.831"
              style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box; stroke: currentColor; stroke-dasharray: 75, 100; stroke-width: 2.8; stroke-linecap: round;"
            />
          </svg>
        </span>
        <div
          class="nameWrapper"
        >
          <span>
            No valid template with id "stepGroup" found in any namespace
          </span>
        </div>
        <span
          class="StyledProps--font StyledProps--main duration StyledProps--inline"
        >
           
          8m 36s
        </span>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="group"
        >
          <div
            class="step"
            data-status="running"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="spinner"
            >
              <svg
                fill="none"
                height="16"
                viewBox="0 0 36 36"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M18 2.0845       a 15.9155 15.9155 0 0 1 0 31.831       a 15.9155 15.9155 0 0 1 0 -31.831"
                  style="animation: 1s linear infinite spinner-rotation; transform-origin: 50% 50%; transform-box: fill-box; stroke: currentColor; stroke-dasharray: 75, 100; stroke-width: 2.8; stroke-linecap: round;"
                />
              </svg>
            </span>
            <div
              class="nameWrapper"
            >
              <div
                class="groupIcon"
              />
              <p
                class="StyledProps--font Text--lineclamp StyledProps--main name"
                style="--text-line-clamp: 1;"
              >
                Step 4
              </p>
            </div>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              14m 58s
            </span>
          </div>
          <ul
            class="root"
          >
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="success"
              >
                <span
                  class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
                  icon="tick-circle"
                >
                  <svg
                    data-icon="tick-circle"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                  >
                    <desc>
                      tick-circle
                    </desc>
                    <path
                      d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  a very long name for no reason
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  1m 52s
                </span>
              </div>
            </li>
            <li
              class="item"
              data-type="item"
            >
              <div
                class="step"
                data-status="notstarted"
              >
                <span
                  class="bp3-icon StyledProps--main icon"
                  data-icon="pending"
                >
                  <svg
                    height="16"
                    viewBox="0 0 9 9"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M8.20641 2.70856C8.13476 2.75156 8.0631 2.76589 7.99145 2.76589C7.86246 2.76589 7.73348 2.69423 7.6475 2.57958C7.51852 2.36462 7.36087 2.17831 7.20323 1.992C7.04559 1.83436 7.05992 1.5764 7.21756 1.43309C7.3752 1.27544 7.63317 1.28978 7.77648 1.44742C7.97711 1.66239 8.16342 1.90602 8.32106 2.16398C8.45004 2.35028 8.39272 2.59392 8.20641 2.70856Z"
                    />
                    <path
                      d="M5.98739 7.8679C6.56064 7.60994 7.07656 7.223 7.44917 6.7214C7.57815 6.54943 7.83611 6.50644 8.00809 6.64975C8.18006 6.77873 8.22306 7.03669 8.07974 7.20866C7.62115 7.81057 7.0049 8.29784 6.30268 8.61312C6.24535 8.64178 6.20236 8.64178 6.14503 8.64178C5.98739 8.64178 5.84408 8.5558 5.77242 8.39815C5.68643 8.19752 5.78675 7.95389 5.98739 7.8679Z"
                    />
                    <path
                      d="M8.07816 5.40317C8.20714 4.93024 8.22147 4.42864 8.16415 3.95571C8.13548 3.74075 8.2788 3.54011 8.5081 3.51145C8.72306 3.48278 8.9237 3.6261 8.95236 3.8554C9.03835 4.44297 9.00969 5.03055 8.85204 5.61813C8.80905 5.80444 8.63708 5.91909 8.4651 5.91909C8.43644 5.91909 8.39345 5.91909 8.36478 5.90476C8.14982 5.8331 8.02083 5.61813 8.07816 5.40317Z"
                    />
                    <path
                      d="M5.74837 0.857647C5.6886 0.652472 5.80647 0.437689 6.01165 0.377916C6.21683 0.318143 6.43161 0.436016 6.49138 0.641192C6.55115 0.846367 6.43328 1.06115 6.22811 1.12092C6.02293 1.1807 5.80815 1.06282 5.74837 0.857647Z"
                    />
                    <path
                      d="M4.52451 0C4.73948 0 4.92578 0.171974 4.92578 0.401274C4.92578 0.616242 4.75381 0.802547 4.52451 0.802547C2.48948 0.802547 0.827058 2.46497 0.827058 4.5C0.827058 4.88694 0.884382 5.27388 1.01336 5.66082C1.08502 5.87579 0.97037 6.09076 0.755402 6.16242C0.712409 6.17675 0.669415 6.17675 0.626421 6.17675C0.454447 6.17675 0.296803 6.07643 0.25381 5.90445C0.0961666 5.44586 0.0245099 4.97293 0.0245099 4.5C0.0245099 2.0207 2.04521 0 4.52451 0Z"
                    />
                    <path
                      d="M1.80158 6.99381C2.50381 7.75336 3.49266 8.19763 4.52451 8.19763C4.73948 8.19763 4.92578 8.3696 4.92578 8.5989C4.92578 8.81387 4.75381 9.00017 4.52451 9.00017C3.27769 9.00017 2.05954 8.46992 1.214 7.53839C1.07069 7.38075 1.07069 7.12279 1.24266 6.97947C1.40031 6.82183 1.64394 6.83616 1.80158 6.99381Z"
                    />
                  </svg>
                </span>
                <p
                  class="StyledProps--font Text--lineclamp StyledProps--main name"
                  style="--text-line-clamp: 1;"
                >
                  step_4_1_2
                </p>
                <span
                  class="StyledProps--font StyledProps--main duration StyledProps--inline"
                >
                   
                  12m 32s
                </span>
              </div>
            </li>
          </ul>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;

exports[`<StepsTree /> tests works for retry steps 1`] = `
<div>
  <ul
    class="root"
  >
    <li
      class="item"
      data-type="retry-item"
    >
      <div
        class="step"
        data-status="success"
      >
        <span
          class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
          icon="tick-circle"
        >
          <svg
            data-icon="tick-circle"
            height="16"
            viewBox="0 0 16 16"
            width="16"
          >
            <desc>
              tick-circle
            </desc>
            <path
              d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
              fill-rule="evenodd"
            />
          </svg>
        </span>
        <p
          class="StyledProps--font Text--lineclamp StyledProps--main name"
          style="--text-line-clamp: 1;"
        >
          Step 1
        </p>
      </div>
      <ul
        class="root"
      >
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              pipeline.execution.retryStepCount
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 11s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="failed"
          >
            <span
              class="bp3-icon StyledProps--main icon"
              data-icon="circle-cross"
            >
              <svg
                height="16"
                viewBox="0 0 13 13"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M0.166687 6.5013C0.166687 9.99911 3.00222 12.8346 6.50002 12.8346C9.99782 12.8346 12.8334 9.99911 12.8334 6.5013C12.8334 3.0035 9.99782 0.167969 6.50002 0.167969C3.00222 0.167969 0.166687 3.0035 0.166687 6.5013ZM4.23841 3.498L6.49799 5.76096L8.76198 3.49767C9.25705 3.00275 9.99831 3.74646 9.50325 4.24137L7.23992 6.504L9.49411 8.76157C9.98873 9.25693 9.2468 9.99996 8.75218 9.5046L6.49732 7.24638L4.23807 9.50494C3.74301 9.99985 3.00174 9.25615 3.49681 8.76123L5.75539 6.50334L3.49648 4.24104C3.00186 3.74568 3.74379 3.00264 4.23841 3.498Z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              pipeline.execution.retryStepCount
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 11s
            </span>
          </div>
        </li>
        <li
          class="item"
          data-type="item"
        >
          <div
            class="step"
            data-status="success"
          >
            <span
              class="bp3-icon bp3-icon-tick-circle StyledProps--main icon"
              icon="tick-circle"
            >
              <svg
                data-icon="tick-circle"
                height="16"
                viewBox="0 0 16 16"
                width="16"
              >
                <desc>
                  tick-circle
                </desc>
                <path
                  d="M8 16c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8zm4-11c-.28 0-.53.11-.71.29L7 9.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42l3 3c.18.18.43.29.71.29s.53-.11.71-.29l5-5A1.003 1.003 0 0012 5z"
                  fill-rule="evenodd"
                />
              </svg>
            </span>
            <p
              class="StyledProps--font Text--lineclamp StyledProps--main name"
              style="--text-line-clamp: 1;"
            >
              pipeline.execution.retryStepCount
            </p>
            <span
              class="StyledProps--font StyledProps--main duration StyledProps--inline"
            >
               
              9m 11s
            </span>
          </div>
        </li>
      </ul>
    </li>
  </ul>
</div>
`;
